--- a/.prettierrc
+++ b/.prettierrc
@@ -1,8 +1,9 @@
 {
-    "semi":false,
-    "singleQuote": true,
-    "endOfLine": "crlf",
-    "printWidth": 80,
-    "tabWidth": 2,
-    "bracketSpacing": true
+  "semi": false,
+  "singleQuote": true,
+  "endOfLine": "crlf",
+  "printWidth": 80,
+  "tabWidth": 2,
+  "bracketSpacing": true,
+  "plugins": ["prettier-plugin-tailwindcss"]
 }
