delete airbnb in package

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,9 +11,7 @@
     "plugin:react-hooks/recommended",
     "plugin:jsx-a11y/recommended",
     "plugin:import/errors",
-    "plugin:import/warnings",
-    "airbnb",
-    "airbnb/hooks"
+    "plugin:import/warnings"
   ],
   "parserOptions": {
     "ecmaFeatures": { "jsx": true },
